# NLP

./: .gitignore  README.md  pyproject.toml  requirements.txt
Ahri/LLM/: requirements.txt
LLM/: README.md  pyproject.toml  requirements.txt
LLM/Llama/: Llama.md  Llama3.md
NLP/: __init__.py
NLP/model/: SelfAttention.py
src/nlp/: __init__.py
tests/: test_SelfAttention.py
utils/: __init__.py
