[project]
name = "nlp"
version = "0.1.0"
description = "Sokyoei's NLP project"
authors = [
    { name = "Sokyoei", email = "89757286+Sokyoei@users.noreply.github.com" }
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/nlp"]
