[project]
name = "nlp_llm"
version = "0.1.0"
description = "Sokyoei's Algorithms"
authors = [{ name = "Sokyoei", email = "89757286+Sokyoei@users.noreply.github.com" }]
dependencies = ["modelscope", "transformers"]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["NLP"]
